--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-<div id="cta">
+<div id="about">
 
 <p>
  The fight over sanctuary cities is moving to the Senate, and we need to make sure Democratic Senators hear from us loud and clear. 
